--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,14 @@ p {
     text-align: center;
 }
 
+p a {
+    color: thistle;
+} 
+
+p a:hover{
+    color: palevioletred;
+}
+
 img {
     display: block;
     margin-left: auto;
