--- a/templates/blogpost.html
+++ b/templates/blogpost.html
@@ -3,13 +3,13 @@
 <head>
     <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/roxy_prof.png">
+    <link rel="icon" href="http://example.com/favicon.png">
 </head>
 
 <body>
 
     <header>
-        <h1>Welcome to my website!</h1>
+        <h1>Ruminations on the World!</h1>
 
         <div class="topnav">
             <a class="active" href="/index.html">Home</a>
@@ -21,10 +21,9 @@
     </header>
 
     <main>
-        <p>It's currently being reworked at the moment, so please come back in the future!</p>
-        <img src="img/roxy_prof.png" alt="Roxy"></img>
-        <p>This is Roxy.</p>
-        <p>My old resume! <a href="/files/JamesRobinsResume.pdf">Resume</a>.</p>
+        <h2>$title</h2>
+        <p>$content</p>
+        <p>$signature</p>
     </main>
 
 </body>
