Added page for UQPool Project

--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,10 @@ img {
 ul {
     text-align: center;
 }
+
+video {
+    display: block;
+    margin: 0 auto;
+    max-width: 600px;
+    text-align: center;
+}
