--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 66%;
+    width: 80%;
 }
 
 .topnav {
@@ -71,6 +71,7 @@ ul {
 video {
     display: block;
     margin: 0 auto;
-    max-width: 600px;
+    width: 100%;
+    height: auto;
     text-align: center;
 }
